Cleaned up the UI, streamlined the code

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin: 30px;
 }
 
 .App-logo {
@@ -7,32 +8,49 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #cccccc;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 48px;
+  font-weight: bold;
+  color: black;
 }
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-button {
+  border: none;
+  padding: 0;
+  background: none;
+}
+
+fieldset {
+  width: 80%;
+}
+
+legend {
+  text-align: left;
+  color: black;
+  font-size: 36px;
+}
+
+fieldset p {
+  font-size: 48px;
+  text-align: left;
+}
+
+.Zodiac-signs {
+  font-size: 60pt;
+  text-align: center;
+  margin: 30px;
+}
+
+body {
+  background-color: #cccccc;
 }
